fix: Update dependencies
tonic 0.12 -> 0.13.1
tower 0.4.13 -> 0.5.2

add build.rs
Automatically generate Rust code from proto

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ categories = ["network-programming", "development-tools"]
 keywords = ["microservices", "config", "naming", "service-discovery", "config-management"]
 exclude = [".github", "proto", "tests"]
 
+build = "build.rs"
+
 [workspace]
 members = [
     "nacos-macro"
@@ -71,8 +73,8 @@ chrono = { version = "0.4", features = ["now"] ,optional = true }
 
 async-trait = "0.1"
 async-stream = "0.3.5"
-tonic = "0.12"
-tower = { version = "0.4.13", features = ["filter", "log"] }
+tonic = "0.13"
+tower = { version = "0.5.2", features = ["filter", "log"] }
 futures-util = "0.3.28"
 want = "0.3.0"
 dashmap = "5.4.0"
@@ -82,8 +84,11 @@ dotenvy = "0.15"
 
 [dev-dependencies]
 tracing-subscriber = { version = "0.3", features = ["default"] }
-tonic-build = "0.12"
+tonic-build = "0.13"
 mockall = { version = "0.11" }
+
+[build-dependencies]
+tonic-build = "0.13"
 
 
 [[example]]
